--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
     <div>
         <a href="https://github.com/Cleins12/-4" target="_blank" style="color: aqua; text-decoration: none; font-size: 20px; display: block; margin-bottom: 25px;"> &nbsp;&nbsp;&nbsp;&nbsp; Лабораторная №4 </a>
     </div>
+    <div>
+        <a href="https://cleins12.github.io/laba-5/" target="_blank" style="color: aqua; text-decoration: none; font-size: 20px; display: block; margin-bottom: 25px;"> &nbsp;&nbsp;&nbsp;&nbsp; Лабораторная №5 </a>
+    </div>
 
 </body>
+
 </html>
