--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Лабораторный работы по WEB Голов В.Д</title>
+    <title>Лабораторные работы по WEB Голов В.Д</title>
 </head>
 <body style="background-image: url('bg.jpg');">
     <h1 style="text-align: center; color: white;">Лабораторные работы по предмету "WEB технологии"</h1>
@@ -34,3 +34,4 @@
 </body>
 
 </html>
+
